--- a/app/globals.css
+++ b/app/globals.css
@@ -3,17 +3,29 @@
 @tailwind utilities;
 
 @layer base {
+  /* CSS Reset */
+  *, *::before, *::after {
+    @apply m-0 p-0 box-border;
+  }
+
+  /* Set all headings to normal weight */
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-normal;
+  }
+}
+
+@layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
+    --background: #F8F8F1;
+    --foreground: #324343;
+    --card: 60 33% 96%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
+    --primary: #FF6F00;
+    --primary-foreground: #FF6F00;
+    --secondary: #96EEE5;
+    --secondary-foreground: #96EEE5;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
@@ -23,7 +35,7 @@
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
-    --radius: 0.5rem;
+    --radius: 16px;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
