--- a/app/globals.css
+++ b/app/globals.css
@@ -16,16 +16,16 @@
 
 @layer base {
   :root {
-    --background: #F8F8F1;
-    --foreground: #324343;
+    --background: 60 30% 96%;
+    --foreground: 180 14% 23%;
     --card: 60 33% 96%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: #FF6F00;
-    --primary-foreground: #FF6F00;
-    --secondary: #96EEE5;
-    --secondary-foreground: #96EEE5;
+    --primary: 24 100% 50%;
+    --primary-foreground: 180 9% 17%;
+    --secondary: 174 75% 76%;
+    --secondary-foreground: 180 9% 17%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
