--- a/app/globals.css
+++ b/app/globals.css
@@ -41,31 +41,33 @@
     --chart-5: 27 87% 67%;
   }
 
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+  .theme-1 {
+    --background: 164 69% 14%;
+    --primary: 344 71% 13%;
+    --secondary: 164 71% 13%;
+    --secondary-foreground: 60 30% 96%;
+  }
+
+  /* gunmetal */
+  .theme-2 {
+    --background: 220 15% 20%;
+    --primary: 34 51% 24%;
+    --secondary: 187 61% 74%;
+    --secondary-foreground: 220 15% 20%;
+  } 
+
+  .theme-3 {
+    --background: 37 44% 24%;
+    --primary: 218 46% 24%;
+    --secondary: 37 46% 24%;
+    --secondary-foreground: 60 30% 96%;
+  }
+
+  .theme-4 {
+    --background: 300 35% 10%;
+    --primary: 334 34% 16%;
+    --secondary: 334 60% 32%;
+    --secondary-foreground: 60 30% 96%;
   }
 }
 
