--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,8 @@
     --primary: 47 93% 63%;
     --primary-foreground: 180 9% 17%;
     --secondary: 174 75% 76%;
-    --secondary-foreground: 180 9% 17%;
+    --secondary-foreground: 180 8% 15%;
+    --foreground: 60 30% 96%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
@@ -58,33 +59,28 @@
                 border-color 0.3s ease-in-out;
   }
 
+  /* dark purple and gold */
   .theme-1 {
-    --background: 164 69% 14%;
-    --primary: 344 71% 13%;
-    --secondary: 164 71% 13%;
-    --secondary-foreground: 60 30% 96%;
+    --background: 274 32% 13%;
+    --secondary: 45 93% 58%;
   }
 
-  /* gunmetal */
+  /* gunmetal and ligth blue */
   .theme-2 {
     --background: 220 15% 20%;
-    --primary: 34 51% 24%;
-    --secondary: 187 61% 74%;
-    --secondary-foreground: 220 15% 20%;
+    --secondary: 200 35% 72%;
   } 
 
+  /* raisin black and verdigris */
   .theme-3 {
-    --background: 37 44% 24%;
-    --primary: 218 46% 24%;
-    --secondary: 37 46% 24%;
-    --secondary-foreground: 60 30% 96%;
+    --background: 340 7% 17%;
+    --secondary: 179 78% 42%;
   }
 
+  /* green and pink */
   .theme-4 {
-    --background: 300 35% 10%;
-    --primary: 334 34% 16%;
-    --secondary: 334 60% 32%;
-    --secondary-foreground: 60 30% 96%;
+    --background: 180 16% 33%;
+    --secondary: 354 78% 88%;
   }
 }
 
